# BEED

./: .gitignore  CLAUDE.md  README.md  documentation.md  experiments.md  pyproject.toml  theories.md
docs/: data_description.md  seqboostnet_article.md
notebooks/: 01_eda.ipynb  02_features.ipynb  03_baselines.ipynb  04_classifiers_fft_umap.ipynb  05_seqboostnet.ipynb  06_binary_cases.ipynb  07_threshold_tuning.ipynb
src/beed/: __init__.py  config.py  data.py  features.py
tests/: test_data.py
