[project]
name = "beed"
version = "0.1.0"
description = "Bangalore EEG Epilepsy Dataset — seizure classification"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "umap-learn>=0.5",
    "xgboost>=2.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "ipykernel>=6.29",
    "jupyter>=1.1",
    "pyarrow>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beed"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=beed --cov-report=term-missing"
